# recipebox_v1

./: .gitignore  pyproject.toml
courier/: settings.py  urls.py
recipebox/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recipebox/migrations/: 0001_initial.py  0002_author_favorite.py  0003_auto_20200603_2016.py
recipebox/templates/: author.html  generic_form.html  index.html  recipe.html
